white space fixed by using position

--- a/styles.css
+++ b/styles.css
@@ -6,22 +6,23 @@
 
 }
 
+body {
+    overflow: auto;
+}
 .flex{
     display:flex;
     align-items: center;
 }
 
 
-/*.container{
-    max-width:1029px;
-    padding-inline:110px;
-    overflow: hidden;
-}*/
+
 
 
 nav{
-    gap: 45rem;
+    max-width: 100%;
+    gap: 55%;
     padding-bottom:2rem;
+    position: relative;
 }
 
 nav a{
@@ -35,6 +36,7 @@ nav a li{
 }
 
 .ul-flex {
+   
     justify-content: space-between;
     gap: 50px;
     padding-block: 39px;
@@ -43,31 +45,39 @@ nav a li{
 
 .hero-text{
     color: white;
+    position: absolute;
 }
 
 
 .left-col{
     background-color:#FFB83B;
+    width: 50%;
+    position: relative;
     padding-top: 120px;
-    padding-bottom: 100px;
-    padding-left: 100px;
-    border-radius: 10px;
+    padding-bottom: 80px;
+    padding-left: 70px;
+    border-radius: 40px;
+    margin-bottom: 3rem;
+    margin-left: 2rem;
+   
 
   
 }
 
 .asset1{
-    width: 785px;
-    height: 655px;
+    width: 100%;
+    /*height: 655px;*/
+    overflow-x: hidden;
 }
 
 
 
 .hero-text{
-    font-size: 72px;
+    font-size: 4.5em;
     font-weight: 500;
-    position: relative;
+    
     bottom:5rem;
+    flex-wrap: wrap;
 }
 
 
@@ -75,14 +85,14 @@ nav a li{
     color: white;
     font-size: 18px;
     font-weight: 500;
-    position: relative;
+   
     bottom: 4rem;
 }
 
 .app-icon{
-    position: relative;
+   
     bottom: 2rem;
-    gap: 30px;
+    gap: 3%;
 }
 
 
@@ -98,34 +108,31 @@ nav a li{
     padding-block: 13px;
     padding-inline: 10px;
     font-size: 18px;
-    border-radius: 10px;
+    border-radius: 50px;
 }
 
 
 
 header{
-    gap: 30px;
+    gap: 2%;
 }
 
 
 .logo{
-    position: relative;
-    left: 110px;
+   position: absolute;
+    left: 90px;
 }
 
 .sub-header{
-   
+
     text-align: center;
+    width: 100vw;
     color: white;
     background-color: #4F5CD1;
-    padding-top: 71px;
-    padding-bottom: 66px;
-    padding-left: 132px;
-    padding-right: 152px;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 35px;
-    line-height: 52px;
+    padding-top:71px;
+    padding-bottom:66px;
+    font-weight:500;
+    font-size:35px;
 
 }
 
@@ -138,38 +145,64 @@ header{
 .fe-img{
     width: 219px;
 height: 115px;
-position:relative;
+
 right: 40px;
 
 }
 
 .features{
     padding-block: 90px;
-}
-
-
-.call-to-action{
-    flex-direction: column !important;
-    gap: 4.5rem !important;
-    align-items: flex-start !important;
-    background-color: #D9FDE5 !important;
-    padding-bottom: 2rem !important;
-    padding-top: 6rem;
-    padding-left: 6.8rem !important;
+    gap: 100px;
+    width: 100%;
     
 }
 
-.big{
+.feature-2 h2{
+    align-self: flex-start;
+}
+
+
+
+.call-to-action{
+    flex-direction: column ;
+    gap: 4.5rem ;
+    width: 100%;
     position: relative;
+    align-items: flex-start ;
+    background-color: #D9FDE5 ;
+    padding-bottom: 2rem !;
+    padding-top: 6rem;
+    padding-left: 6.8rem ;
+    box-sizing: border-box;
+    
+}
+
+.call-to-action p{
+    position: absolute;
+}
+
+.call-to-action .btn{
+    color: white;
+    background-color:rgb(15, 13, 13);
+    padding-block: 13px;
+    padding-inline: 10px;
+    position: absolute;
+    font-size: 13px;
+    border-radius: 50px;
+}
+
+.big{
+   
     top: 1.5rem;
+    position: absolute;
 }
 
 .signoff{
     padding-top: 88px;
     padding-bottom:57px;
     flex-direction: column;
-    align-items: center !important;
-    padding-inline: 234px;
+    align-items: center ;
+    padding-inline: 134px;
     gap: 1rem;
 }
 
@@ -196,11 +229,14 @@ align-items: flex-start;
 
 
 footer{
-    gap:60rem;
+    box-sizing: border-box;
+    gap:80%;
     background-color: black;
     padding-top: 38px;
     padding-bottom: 50px;
+    position: relative;
     padding-inline: 100px;
+    width: 100%;
 }
 
 .tagline{
@@ -228,6 +264,7 @@ font-size: 13px;
 line-height: 25px;
 text-align: center;
 color: rgba(255, 255, 255, 0.72);
+width: 100%;
 background-color: #414141;
 }
 
@@ -243,7 +280,7 @@ li:hover{
 
 ::selection{
     color: orange;
-    /*background-color: black;*/
+   
    
 }
 
